--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,39 +1,4 @@
 {
-  "apiVersion": "argoproj.io/v1alpha1",
-  "kind": "Application",
-  "metadata": {
-    "name": "web",
-    "namespace": "default"
-  },
-  "spec": {
-    "destination": {
-      "server": "https://kubernetes.default.svc",
-      "namespace": "default"
-    },
-    "source": {
-      "repoURL": "https://github.com/nbolinaga/single-app-k8s.git",
-      "path": ".",
-      "targetRevision": "HEAD"
-    },
-    "project": "default",
-    "syncPolicy": {
-      "automated": {
-        "prune": true,
-        "selfHeal": true
-      }
-    },
-    "plugin": {
-      "name": "kustomize",
-      "env": {
-        "BUILD_PATH": "./k8s"
-      }
-    },
-    "configManagementPlugins": [
-      {
-        "name": "kustomize"
-      }
-    ]
-  }
+  "extends": "next/core-web-vitals"
 }
-
 
